# activeetfs

./: .gitignore  CHANGELOG.md  CLAUDE.md  README.md  TODO.md  Task.md  implementation_plan.md  install.md  review_opus48.md  walkthrough.md
.github/workflows/: release.yml
app/: package-lock.json  package.json
app/public/: help.html
app/src/: App.tsx  styles.css  types.ts
app/src-tauri/: .gitignore  Cargo.toml  installer.nsi  tauri.conf.json
app/src-tauri/capabilities/: default.json
app/src-tauri/src/: commands.rs  db.rs  fetch.rs  lib.rs  main.rs
app/src/components/: AddEtfModal.tsx  ChangelogModal.tsx  CompareView.tsx  Dashboard.tsx  HoldingsTable.tsx  Layout.tsx  SelectEtfsWindow.tsx  Sidebar.tsx  UpdateAllWindow.tsx  UpdateTodayWindow.tsx
app/src/data/: activeetfinfos.json
app/src/utils/: date.ts  etfs.ts  holdings.ts
scripts/: build.js  build_release.ps1  refactor_json.py  update-version.js
sidecars/: go.mod
sidecars/cmd/get_koact/: main.go
sidecars/cmd/get_pdfs/: main.go
sidecars/cmd/get_time/: main.go
sidecars/pkg/scraper/: scraper.go
